force-app/main/default/objects/Contract/fields/Bounty__c.field-meta.xml
<CustomField>
    <fullName>Bounty__c</fullName>
    <description>Does the partner get paid a bounty on referrals?</description>
    <inlineHelpText>Does the partner get paid a bounty on referrals?</inlineHelpText>
    <label>Bounty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>$200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>