force-app/main/default/objects/Contract/fields/Current_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_Share__c</fullName>
    <description>What is the current Revenue percentage being paid to partner?</description>
    <inlineHelpText>What is the current Revenue percentage being paid to partner?</inlineHelpText>
    <label>Current Revenue Share %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>