force-app/main/default/objects/Contract/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>How partner integrates with Ubiquity</description>
    <inlineHelpText>How partner integrates with Ubiquity</inlineHelpText>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Buy Process</fullName>
            </value>
            <value>
                <fullName>Lead Process</fullName>
            </value>
            <value>
                <fullName>Payroll census</fullName>
            </value>
            <value>
                <fullName>Manual payroll</fullName>
            </value>
            <value>
                <fullName>Full Integration (Buy, Lead and Payroll)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>