force-app/main/default/objects/Contract/fields/Lead_Submission_Process__c.field-meta.xml
<CustomField>
    <fullName>Lead_Submission_Process__c</fullName>
    <description>Please Outline the lead submission processes that have been established with the partner (Custom Form, email, phone, etc).</description>
    <inlineHelpText>Please Outline the lead submission processes that have been established with the partner (Custom Form, email, phone, etc).</inlineHelpText>
    <label>Lead Submission Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>