force-app/main/default/objects/Contract/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>Is the partner going through a trusted qualification process before sending Ubiquity leads, or will they be routed to the SDR Team for Qualification.</description>
    <inlineHelpText>Is the partner going through a trusted qualification process before sending Ubiquity leads, or will they be routed to the SDR Team for Qualification.</inlineHelpText>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Partner Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>