force-app/main/default/objects/Contract/fields/Partnered_Preferred_Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Partnered_Preferred_Fund_List__c</fullName>
    <description>Does the partner have a preferred Fund List they would like their referrals to use?</description>
    <inlineHelpText>Does the partner have a preferred Fund List they would like their referrals to use?</inlineHelpText>
    <label>Partnered Preferred Fund List</label>
    <type>TextArea</type>
</CustomField>