force-app/main/default/objects/Contract/fields/Revenue_Share_Notes__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Notes__c</fullName>
    <description>Outline the extent of the revenue share.</description>
    <inlineHelpText>Outline the extent of the revenue share.</inlineHelpText>
    <label>Revenue Share Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>